Defaulting opacity to 1.

--- a/src/toaster.less
+++ b/src/toaster.less
@@ -27,7 +27,7 @@
 @red: #BD362F;
 @blue: rgb(16,114,186);
 @orange: #F89406;
-@default-container-opacity: .8;
+@default-container-opacity: 1;
 @default-background-color: @white;
 
 // Styles
