Aligning and positioning the font awesome icons.

--- a/src/toaster.less
+++ b/src/toaster.less
@@ -162,6 +162,8 @@ button.toaster-close-button {
     float:left;
     height:100px;
     width:40px;
+    padding-top: 10px;
+    padding-left: 8px;
   }
 
   .toaster-icon > i {
@@ -197,6 +199,7 @@ button.toaster-close-button {
   .toaster-icon::before {
     font-family: FontAwesome;
     content: "\f00c";
+    font-size: 25px;
   }
 }
 
@@ -209,6 +212,7 @@ button.toaster-close-button {
   .toaster-icon::before {
     font-family: FontAwesome;
     content: "\f06a";
+    font-size: 25px;
   }
 }
 
@@ -221,6 +225,7 @@ button.toaster-close-button {
   .toaster-icon::before {
     font-family: FontAwesome;
     content: "\f05a";
+    font-size: 25px;
   }
 }
 
@@ -233,6 +238,7 @@ button.toaster-close-button {
   .toaster-icon::before {
     font-family: FontAwesome;
     content: "\f071";
+    font-size: 25px;
   }
 }
 
